# pysnake

./: README.md  pyproject.toml
code/: apple.py  main.py  settings.py  snake.py
