[tool.poetry]
name = "pysnake"
version = "0.1.0"
description = "The snake made with pygame"
authors = ["Daniel Alejandro Leyva Perez <82961309+daniellp99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
